Add viewcomponent and update style in feed

--- a/web/app/javascript/stylesheets/_utils.scss
+++ b/web/app/javascript/stylesheets/_utils.scss
@@ -58,6 +58,12 @@
   .contain-intrinsic-size-lg {
     contain-intrinsic-size: 500px;
   }
+
+  .hide-scrollbar {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
 
 .ripple {
