--- a/web/app/components/user_chip_small_component.html.erb
+++ b/web/app/components/user_chip_small_component.html.erb
@@ -1,28 +1,14 @@
 <%= component_controller do %>
-	<div class="relative flex items-center py-1 pl-1 pr-3 mb-2 mr-2 bg-green-100 border-2 border-gray-100 border-green-200 rounded-full w-content">
+	<div class="border border-gray-100 relative flex items-center p-1 mb-2 mr-2 rounded-full w-content">
 		<% begin %>
-			<%= image_tag(@friend.picture, {class: "w-8 h-8 mr-2 bg-white bg-cover rounded-full", alt: @friend.name, onerror: "this.style.opacity='0'"}) %>
+			<%= image_tag(@friend.picture, {class: "w-5 h-5 mr-2 bg-white bg-cover rounded-full", alt: @friend.name, onerror: "this.style.opacity='0'"}) %>
 		<% rescue %>
-			<div class="w-8 h-8 mr-2 bg-white bg-cover rounded-full"></div>
+			<div class="w-5 h-5 mr-2 bg-gray-50 rounded-full"></div>
 		<% end %>
 
-		<div class="text-sm font-medium text-green-600">
+		<div class="text-sm font-medium text-gray-400">
 			<%= link_to @friend.first_name, user_path(@friend), {id: dom_id(@friend, :friendship_accepted)} %>
 		</div>
-		<%= reflex_tag :begin_edit,
-									 :div do %>
-			<% if @loading_edit %>
-				<svg class="h-4 ml-1 -mr-1 text-green-400 fill-current animation-1s animation-linear animation-spin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<path fill="none" d="M0 0h24v24H0V0z"/>
-					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
-				</svg>
-			<% else %>
-				<svg class="h-4 ml-1 -mr-1 text-green-400 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-					<path d="M0 0h24v24H0z" fill="none"/>
-					<path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
-				</svg>
-			<% end %>
-		<% end %>
 
 		<% if @editing %>
 			<div id="sheet-content" data-target="sheet.content" class="fixed top-0 left-0 z-50 w-screen h-screen">
