--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -104,10 +104,7 @@
 
 <section id="page" class="pb-10">
 	<div class="relative w-full mx-auto is-animated md:mt-12 md:w-6/12">
-		<%= render partial: 'events/large_event', locals: {
-				event: @event,
-				user:  current_user
-		} %>
+		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 
 	<div class="relative w-9/12 w-full px-2 mx-auto mt-12 mb-12 md:px-0 md:w-6/12">
