--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,10 +1,10 @@
 <%= component_controller do %>
-  <div class="md:bg-white md:px-5">
+  <div class="bg-white md:px-5">
     <% @events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
-      <div id="<%= "main-sidebar--group-#{group[0]}" %>" class="bg-white mb-12 content-visibility-auto contain-intrinsic-size-md">
+      <div id="<%= "main-sidebar--group-#{group[0]}" %>" class="mb-5 md:mb-12 content-visibility-auto contain-intrinsic-size-md">
         <div class="<%= helpers.class_names('sticky bg-white z-10 flex-1 px-5 pt-4 pb-2 leading-6 text-gray-700 md:leading-normal md:px-5',
                                             {'top-0':  helpers.mobile_device?,
-                                             'top-12': !helpers.mobile_device?}) %>">
+                                             'top-12': !helpers.mobile_device? || current_page?('/minha-agenda')}) %>">
           <h2 class="text-xl font-semibold md:text-2xl"><%= helpers.day_of_week(group[0].to_date).titlecase %></h2>
           <% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
             <div class="-mt-1 border-b-2 border-green-500 font-light text-xs w-content"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
@@ -15,7 +15,7 @@
           <% end %>
         </div>
         <div id="vertical-daily-events">
-          <%= render(MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user)) %>
+          <%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, parent_key: key) %>
         </div>
       </div>
     <% end %>
