--- a/web/app/components/main_sidebar/my_agenda_component.html.erb
+++ b/web/app/components/main_sidebar/my_agenda_component.html.erb
@@ -1,9 +1,5 @@
-<%= component_controller id: 'my-agenda' do %>
-  <h2 class="flex-1 px-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal text-md">
-    Minha agenda
-  </h2>
-
-  <div id="calendar" data-target="left-sidebar--my-agenda.calendar" class="mt-3 select-none simple-calendar tap-highlight-none">
+<%= component_controller id: 'my-agenda', class: 'mb-24' do %>
+  <div id="calendar" data-target="main-sidebar--my-agenda.calendar" class="mt-3 mb-24 select-none simple-calendar tap-highlight-none">
     <div class="calendar-heading">
       <%= reflex_tag :prev_month, :div, class: 'cursor-pointer text-green-500 hover:bg-green-100 h-8 w-8 rounded-full flex justify-center items-center' do %>
         <svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -33,7 +29,7 @@
       <% date_range.each_slice(7) do |week| %>
         <tr>
           <% week.each do |day| %>
-            <%= content_tag :td, data: {key: key, action: 'click->left-sidebar--my-agenda#inDay', day: day.strftime}, class: td_classes_for(day) do %>
+            <%= content_tag :td, data: {key: key, action: 'click->main-sidebar--my-agenda#inDay', day: day.strftime}, class: td_classes_for(day) do %>
               <%= content_tag :div, class: 'mx-auto text-xs day-of-month' do %>
                 <%= day.strftime '%e' %>
               <% end %>
@@ -60,23 +56,20 @@
       </svg>
       <%= start_date.strftime("%d/%m/%Y") %>
     </div>
-    <%= reflex_tag :clear_filter, :div, id: 'my-agenda__clear-filter', class: helpers.class_names('px-5 text-center cursor-pointer underline text-gray-400 text-xs',
+    <%= reflex_tag :clear_filter, :div, id: 'my-agenda__clear-filter', class: helpers.class_names('mb-3 md:mb-0 px-5 text-center cursor-pointer underline text-gray-400 text-xs',
                                                                                                   'hidden': !@filter) do %>
       Remover filtro
     <% end %>
-    <%= render LeftSidebar::GroupByDayListComponent.new(events: @events, user: @user, parent_key: key) if @events.present? %>
+
+    <%= render MainSidebar::GroupByDayListComponent.new(events: @events, user: @user, parent_key: key) if @events.present? %>
   </div>
 
-  <% if @user && @events.empty? %>
+  <% if @events.empty? %>
     <div id="my-agenda__filter" class="p-2 mx-5 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
       Sem eventos na sua agenda neste dia.
       <%= reflex_tag :clear_filter, :div, class: 'text-center cursor-pointer underline text-gray-400 text-sm' do %>
         Remover filtro
       <% end %>
-    </div>
-  <% else %>
-    <div class="w-11/12 p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
-      <%= link_to 'Crie uma conta', new_user_registration_path, data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil'}, class: 'underline text-green-500 hover:text-gray-500' %> para salvar seus eventos favoritos
     </div>
   <% end %>
 
