--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,4 +1,4 @@
-<%= component_controller id: dom_id(@event, :horizontal_event), data: {controller: 'main-sidebar--horizontal-event'} do %>
+<%= component_controller id: dom_id(@event, :horizontal_event), data: {'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar} do %>
   <div class="flex justify-between p-5 border-b md:border-0 border-gray-50">
     <div class="pr-6">
       <div class="mb-1 text-xs font-light text-gray-600">
