--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,6 @@
-<section class="is-animated md:mt-32 min-h-screen mt-3 mb-24">
+<%= render Modal::SignInComponent.new(key: 'modal-sign-in', text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
+
+<section class="min-h-screen mt-3 mb-24 is-animated md:mt-16">
 
 	<%= notice %>
 
@@ -13,18 +15,18 @@
   ]
 	</script>
 
-	<div class="is-animated md:w-9/12 mx-auto sm:container space-y-3">
-		<div class="bg-white mx-3 px-8 py-3 rounded-md shadow-sm space-y-3 text-center">
+	<div class="mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-2xl md:max-w-screen-sm sm:container">
+		<div class="px-8 py-3 mx-3 space-y-3 text-center bg-white rounded-md shadow-sm">
 			<%= image_tag shrine_image_url(@place, :sm), {
 					loading: :lazy,
 					class:   'max-w-xs mx-auto rounded-full',
 					onerror: "this.style.opacity='0'"
 			} if @place.image_data? %>
 			<div>
-				<div class="flex-1 font-bold group-hover:text-green-500 leading-6 md:leading-normal md:pl-0 md:text-5xl text-2xl text-gray-700">
+				<div class="flex-1 text-2xl font-bold leading-6 text-gray-700 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-4xl">
 					<%= @place.details_name %>
 				</div>
-				<div class="leading-tight md:px-0 pt-1 text-gray-600 text-sm">
+				<div class="pt-1 text-sm leading-tight text-gray-600 md:px-0">
 					<%= @place.geographic_address %>
 				</div>
 			</div>
@@ -36,10 +38,7 @@
 			</div>
 		</div>
 
-		<%= render partial: 'events/group_by_day_list', locals: {
-				events: @upcoming_events,
-				user:   current_user
-		} %>
+		<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
 
 	</div>
 
