--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -96,17 +96,18 @@
   <% end %>
   <div class="hidden md:inline-block md:col-span-4">
     <div class="flex items-center justify-end h-full mr-5">
-      <% if current_user %>
-        <% begin %>
-          <%= image_tag(current_user.picture, {class: "w-8 h-8 rounded-full", alt: @user.name, onerror: "this.style.opacity='0'"}) %>
-        <% rescue %>
-          <div class="w-8 h-8 mr-2 bg-gray-100 rounded-full"></div>
+      <% unless current_page?('/users/sign_up') || current_page?('/users/sign_in') %>
+        <% if current_user %>
+          <% begin %>
+            <%= image_tag(current_user.picture, {class: "w-8 h-8 rounded-full", alt: @user.name, onerror: "this.style.opacity='0'"}) %>
+          <% rescue %>
+            <div class="w-8 h-8 mr-2 bg-gray-100 rounded-full"></div>
+          <% end %>
+          <%= link_to('Sair', destroy_user_session_path, method: :delete, class: 'hidden md:inline-block text-gray-400 font-sm') %>
+        <% else %>
+          <%= link_to 'Criar conta', new_user_registration_path, data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil'}, class: 'hidden md:inline-block text-gray-400 font-sm text-green-500 hover:text-gray-500' %>
         <% end %>
-        <%= link_to('Sair', destroy_user_session_path, method: :delete, class: 'hidden md:inline-block text-gray-400 font-sm') %>
-      <% else %>
-        <%= link_to 'Criar conta', new_user_registration_path, data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil'}, class: 'hidden md:inline-block text-gray-400 font-sm text-green-500 hover:text-gray-500' %>
       <% end %>
-
     </div>
   </div>
 </header>
