--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -101,7 +101,7 @@
 }
 </script>
 
-<section id="page" class="max-w-screen-lg grid-flow-col pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
+<section id="page" class="max-w-screen-lg grid-cols-12 pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
 	<div class="md:col-span-8">
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
