--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -8,7 +8,7 @@
        data-swipable-user-signin-count="<%= @user&.sign_in_count %>"
        id="swipable"
        style="min-height: 300px">
-    <div class="hidden pl-6 pr-5 overflow-x-hidden overflow-y-scroll transition-all duration-500 opacity-0 h-screen-3/4 is-bot md:h-screen-3/4"
+    <div class="hidden duration-500 is-bot overflow-x-hidden pl-6 pr-5 py-12 transition-all"
          data-swipable-module="onboarding"
          data-target="swipable.onboarding"></div>
     <div class="hidden transition-all duration-500 opacity-0"
